[package]
name = "stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }
aes-gcm = {version = "0.9", features = ["alloc"]}
aes = "0.7"
libc_alloc = "*"
lz4_flex = { version = "0.9.0", default-features = false }